--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -590,6 +590,15 @@ ul {
   border-bottom: 1px solid #f5f5f5;
 }
 
+.add-product-inner .new {
+  font-size: 18px;
+  padding: 5px 10px;
+  color: #fff;
+  border-radius: 5px;
+  background-color: #33b27b;
+  cursor: pointer;
+}
+
 /** Edit Product **/
 .add-product .edit-delete {
   padding: 5px 8px;
@@ -700,7 +709,15 @@ i.fa.fa-cog, i.fa.fa-line-chart, i.fa.fa-user {
 }
 
 .users-inner .right h2 {
-  padding-bottom: 10px;
+  padding-bottom: 15px;
+}
+
+.users-inner .add-user {
+  padding: 10px 15px;
+  border-radius: 5px;
+  background-color: #33b27b;
+  color: #fff;
+  font-size: 18px;
 }
 
 /*# sourceMappingURL=style.css.map */
