--- a/admin/src/assets/scss/style.scss
+++ b/admin/src/assets/scss/style.scss
@@ -613,6 +613,15 @@ background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, F
 	border-bottom: 1px solid #f5f5f5;
 }
 
+.add-product-inner .new {
+	font-size: 18px;
+	padding: 5px 10px;
+	color: #fff;
+	border-radius: 5px;
+	background-color: $secondary-color;
+	cursor: pointer;
+}
+
 /** Edit Product **/
 .add-product .edit-delete {
 	padding: 5px 8px;
@@ -730,5 +739,13 @@ i.fa.fa-cog, i.fa.fa-line-chart, i.fa.fa-user {
 }
 
 .users-inner .right h2 {
-	padding-bottom: 10px;
+	padding-bottom: 15px;
+}
+
+.users-inner .add-user {
+	padding: 10px 15px;
+	border-radius: 5px;
+	background-color: $secondary-color;
+	color: #fff;
+	font-size: 18px;
 }
